<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation = "vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnrespiratory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:insetLeft="15dp"
        android:insetRight="15dp"
        android:text="@string/measure_respiratory_rate" />

    <TextView
        android:id="@+id/txtresprate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/textview" />

    <Button
        android:id="@+id/btnheartrate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:insetLeft="15dp"
        android:insetRight="15dp"
        android:onClick="recordVideoButtonPressed"
        android:text="@string/measure_heart_rate" />

    <TextView
        android:id="@+id/txtheartrate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/textview" />

    <Button
        android:id="@+id/btnuploadsign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:insetLeft="15dp"
        android:insetRight="15dp"
        android:text="@string/upload_signs" />

    <Button
        android:id="@+id/btnsymptoms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:insetLeft="15dp"
        android:insetRight="15dp"
        android:text="@string/symptoms" />

</LinearLayout>